DPO-2731 LAM-datan muunnos tuoreeseen Datex-profiiliin (#168)
* DPO-2731 LAM-datan muunnos tuoreeseen Datex-profiiliin
- Add accuracy
- Add api to get datex2 data with station id
- Removed deprecated classes
- Fixed resolving content type (json/xml)